--- a/2_5_繰り返し処理（for文）②_ノートブック.ipynb
+++ b/2_5_繰り返し処理（for文）②_ノートブック.ipynb
@@ -22,7 +22,7 @@
       },
       "outputs": [],
       "source": [
-        "for i in ragne(10):\n",
+        "for i in range(10):\n",
         "    if i % 3 == 0:\n",
         "        print(i)"
       ]
